<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".MainActivity">




    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="50dp"
            android:layout_height="133dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:layout_weight="1"
            android:text="@string/already_have_an_account"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="153dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher_round" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/top"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <EditText
                android:id="@+id/et_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                android:backgroundTint="#FFFEFE"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            >

            <EditText
                android:id="@+id/et_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"

                >

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/text_login"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FDFBFB"
            android:background="@drawable/rounded_corner"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/text_not_member"
            android:textColor="#40F3F1"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>