<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:background="#00cccc"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >



        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >



            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="70dp"
                android:layout_weight="1"
                android:text="@string/here_s_your_first_step_with_us"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="29sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="153dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher_round" />


        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:layout_below="@id/top"
            android:layout_marginTop="49dp"
            app:cardCornerRadius="18dp"


            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lay_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/et_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/white"
                    android:hint="@string/hint_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lay_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp">

                <EditText
                    android:id="@+id/et_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/white"
                    android:hint="@string/hint_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lay_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp">

                <EditText
                    android:id="@+id/et_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/white"
                    android:hint="@string/hint_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lay_ConfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="230dp">

                <EditText
                    android:id="@+id/et_ConfPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/white"
                    android:hint="@string/hint_confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButtonRegister"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="130dp"
                android:background="@drawable/rounded_corner"
                android:text="@string/text_register"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#FDFBFB"
                android:textSize="24sp"
                android:textStyle="bold"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextViewLoginLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="380dp"
                android:gravity="center"
                android:text="@string/already_a_member_login"
                android:textColor="#40F3F1"
                android:textSize="20sp"
                android:textStyle="bold"

                />
        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</androidx.core.widget.NestedScrollView>